# tree-sitter-popfile

./: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
test/: directives.pop
test/corpus/: directives.txt
