[package]
name = "tree-sitter-popfile"
description = "popfile grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "popfile"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/JaidenDestroyer/tree-sitter-popfile"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
